syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoservice.account.proto.api";

package account.api;

import "common/valid.proto";
import "account/data/account.proto";

message GetAccountRequest {
    int64 account_id = 1;
}

message GetAccountResponse {
    account.data.Account account = 1;
}

/**
 * 获取当个账号
 */
message GetAccount {
    GetAccountRequest request = 1;
    GetAccountResponse response = 2;
}